profile pic changed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!-- Start Amout me -->
 <div id="about" class="light-bg">
     <div class="row">
-        <div class="col-8 aboutme-text">
+        <div class="col-6 aboutme-text">
             <h2>About Me</h2>
             <h4>Hello!</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea, laboriosam non porro labore quas modi facilis, harum ipsum neque exercitationem odit minima iure rem! Id minima </p>
@@ -78,8 +78,8 @@
             </ul>
 
         </div>
-        <div class="col-4 mypic">
-            <img src="images/mypic.jpg" class="img-fluid img-thumbnail" alt="Profile Picture">
+        <div class="col-6 mypic">
+            <img src="images/mypic2.jpg" class="img-fluid img-thumbnail" alt="Profile Picture">
         </div>
     </div>
 
