--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@
 
 <!-- Start Amout me -->
 <div id="about" class="light-bg">
+    <div class="col-12">
+        <h2>About Me</h2>
+    </div>
+    
     <div class="row">
         <div class="col-6 aboutme-text">
-            <h2>About Me</h2>
+            
             <h4>Hello!</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea, laboriosam non porro labore quas modi facilis, harum ipsum neque exercitationem odit minima iure rem! Id minima </p>
 
