--- a/index.html
+++ b/index.html
@@ -56,12 +56,14 @@
 
 <!-- Start Amout me -->
 <div id="about" class="light-bg">
-    <div class="col-12">
-        <h2>About Me</h2>
-    </div>
-    
     <div class="row">
-        <div class="col-6 aboutme-text">
+        <div class="col-12 text-center">
+            <h2>About Me</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 aboutme-text">
             
             <h4>Hello!</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea, laboriosam non porro labore quas modi facilis, harum ipsum neque exercitationem odit minima iure rem! Id minima </p>
@@ -82,7 +84,7 @@
             </ul>
 
         </div>
-        <div class="col-6 mypic">
+        <div class="col-md-6 mypic">
             <img src="images/mypic2.jpg" class="img-fluid img-thumbnail" alt="Profile Picture">
         </div>
     </div>
