Services section in progress

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-            <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+            <a class="nav-link" href="">Home</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
@@ -56,14 +56,10 @@
 
 <!-- Start Amout me -->
 <div id="about" class="light-bg">
-    <div class="row">
-        <div class="col-12 text-center">
-            <h2>About Me</h2>
-        </div>
-    </div>
+
 
     <div class="row">
-        <div class="col-md-6 aboutme-text">
+        <div class="col-md-6 aboutme-text text-center">
             
             <h4>Hello!</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea, laboriosam non porro labore quas modi facilis, harum ipsum neque exercitationem odit minima iure rem! Id minima </p>
@@ -85,7 +81,7 @@
 
         </div>
         <div class="col-md-6 mypic">
-            <img src="images/mypic2.jpg" class="img-fluid img-thumbnail" alt="Profile Picture">
+            <img src="images/mypic2.jpg" class="img-fluid" alt="Profile Picture">
         </div>
     </div>
 
@@ -94,8 +90,27 @@
 
 <!-- Start Services -->
 <div id="services" class="services-bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 service">
+                <h3>Web Development</h3>
+                <img src="images/code-coder-coding-computer-270404.jpg" alt="">
+            </div>
+            <div class="col-md-3 service">
+                <h3>Photography</h3>
+                <img src="images/photo-studio-with-white-wooden-framed-wall-mirror-134469.jpg" alt="">
+            </div>
+            <div class="col-md-3 service">
+                <h3>Videography</h3>
+                <img src="images\woman-standing-in-front-of-video-camera-2918590.jpg" alt="">
+            </div>
+            <div class="col-md-3 service">
+                <h3>Retouching</h3>
+                <img src="images/Retouch.jpg" alt="">
+            </div>
 
-
+        </div>
+    </div>
 </div>
 <!-- End Servives -->
 
