testimonial section completed

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <!-- End First Fixed Background -->
 
 <!-- Start Services -->
-<div id="services" class="light-bg">
+<div id="services" style="background-color: #D3D3D3;">
     <div class="container">
         <div class="row">
             <div class="col-md-3 service">
@@ -134,22 +134,54 @@
 <!-- End Second Fixed Background -->
 
 <!-- Start Testimonials -->
-<div id="testimonials" class="light-bg">
+<div id="testimonials" style="background-color: #A9A9A9;">
+
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+
         <div class="carousel-inner">
-
-          <div class="carousel-item active text-center m-auto border">
-            <img src="images/headshot1.jpg" class="d-block w-100 rounded-circle" alt="...">
+            <!-- First Slide (Active)-->
+          <div class="carousel-item active text-center">
+            <div class="img-box m-auto">
+                <img src="images/headshot1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="client-comment">
+                <blockquote>
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum modi laudantium voluptates architecto cupiditate mollitia eos repellendus in labore eaque? Quod illum aliquam culpa quia sed, veniam quos porro at?
+                </blockquote>
+                <hr class="client-comment-underline">
+                <cite>&#8212; John Doe, Director MMXclusive LTD</cite>
+            </div>
           </div>
-          <h5 class="py-1 my-1"><strong class="text-warning">John Doe</strong></h5>
 
-
-          <div class="carousel-item headshots">
-            <img src="images/headshot2.jpg" class="d-block w-100 rounded-circle" alt="...">
+            <!-- Second Slide -->
+          <div class="carousel-item text-center">
+            <div class="img-box m-auto">
+                <img src="images/headshot2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="client-comment">
+                <blockquote>
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum modi laudantium voluptates architecto cupiditate mollitia eos repellendus in labore eaque? Quod illum aliquam culpa quia sed, veniam quos porro at?
+                </blockquote>
+                <hr class="client-comment-underline">
+                <cite>&#8212; John Doe, MD/CEO MMXclusive LTD</cite>
+            </div>
           </div>
 
-          <div class="carousel-item headshots">
-            <img src="images/Retouch.jpg" class="d-block w-100 rounded-circle" alt="...">
+            <!-- Third Slide -->
+          <div class="carousel-item text-center">
+            <div class="img-box m-auto">
+                <img src="images/Retouch.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="client-comment">
+                <blockquote >
+                    <i class="fas fa-quote-left fa-xs"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum modi laudantium voluptates architecto cupiditate mollitia eos repellendus in labore eaque? Quod illum aliquam culpa quia sed, veniam quos porro at?
+                </blockquote>
+                <hr class="client-comment-underline">
+                <cite>&#8212; Ebony Queen, International Model </cite>
+            </div>
           </div>
 
 
