--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav id="scroll-spy" class="navbar fixed-top navbar-expand-lg navbar-light bg-transparent">
         <a class="navbar-brand" href="#">MMXclusive</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon" style="color: white;"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -199,8 +199,53 @@
 <!-- End Testimonials -->
 
 <!-- Start Contact -->
-<div id="contact" class="home-bg section-content">
-    <h4>Thank You!</h4>
+<div id="contact" class="home-bg contact-section">
+    <div class="container">
+        <h2>Contact Us!</h2>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <form>
+                    <div class="form-row full-name">
+                        <div class="col">
+                            <label for="firstname">First Name:</label>
+                          <input id="firstname" type="text" class="form-control form" placeholder="First name">
+                        </div>
+                        <div class="col">
+                            <label for="lastname">Last Name:</label>
+                          <input id="lastname" type="text" class="form-control" placeholder="Last name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlInput1">Email address:</label>
+                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlTextarea1">Message:</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Please write message here..." rows="3"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-6 text-center">
+                <h3>How to reach us?</h3>
+                <i class="fas fa-phone-alt contact-detail">    416-474-7271</i>
+                <br>
+                <i class="fas fa-map-marker-alt contact-detail">    Toronto, Ontario. Canada</i>
+                <br>
+                <i class="fas fa-envelope-open-text contact-detail">   info@mmxclusive.com</i>
+                <br>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href=""><i class="fab fa-facebook-f fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href=""><i class="fab fa-instagram fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href=""><i class="fab fa-youtube fa-2x"></i></i></a></li>
+                </ul>
+            </div>
+            
+        </div>
+    </div>
+
 </div>
 <!-- End Contact you -->
 
