Retouch service removed

--- a/index.html
+++ b/index.html
@@ -90,35 +90,28 @@
 
 <!-- Start Services -->
 <div id="services" style="background-color: #D3D3D3;">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3 service">
+            <div class="col-sm-4 service text-center">
                 <h3>Web Development</h3>
                 <div class="circular-landscape">
                     <img src="images/code-coder-coding-computer-270404.jpg" alt="">
                 </div>
-                <button type="button" class="btn btn-secondary btn-md">Visit Website</button>
+
             </div>
-            <div class="col-md-3 service">
+            <div class="col-sm-4 service text-center">
                 <h3>Photography</h3>
                 <div class="circular-landscape">
                     <img src="images/photo-studio-with-white-wooden-framed-wall-mirror-134469.jpg" alt="">
                 </div>
-                <button type="button" class="btn btn-secondary btn-md">Visit Website</button>
+
             </div>
-            <div class="col-md-3 service">
+            <div class="col-sm-4 service text-center">
                 <h3>Videography</h3>
                 <div class="circular-portrait">
                     <img src="images\woman-standing-in-front-of-video-camera-2918590.jpg" alt="">
                 </div>
-                <button type="button" class="btn btn-secondary btn-md">Visit Website</button>
             </div>
-            <div class="col-md-3 service">
-                <h3>Retouching</h3>
-                <div class="retouch-img">
-                    <img src="images/Retouch.jpg" alt="">
-            </div>
-            <button type="button" class="btn btn-secondary btn-md">Visit Website</button>
         </div>
 
     </div>
@@ -127,7 +120,7 @@
     
 
 <!-- Start Second Fixed Background -->
-<div class="second-bg">
+<div class="second-bg" style="color: white;">
 
 
 </div>
@@ -201,11 +194,11 @@
 <!-- Start Contact -->
 <div id="contact" class="home-bg contact-section">
     <div class="container">
-        <h2>Contact Us!</h2>
+        <h2 style="color: lime;">Contact Us!</h2>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-sm-6">
                 <form>
                     <div class="form-row full-name">
                         <div class="col">
@@ -225,10 +218,11 @@
                       <label for="exampleFormControlTextarea1">Message:</label>
                       <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Please write message here..." rows="3"></textarea>
                     </div>
+                    <button class="btn btn-primary send-button" type="submit">Send</button>
                 </form>
             </div>
-            <div class="col-md-6 text-center">
-                <h3>How to reach us?</h3>
+            <div class="col-sm-6 text-center">
+                <h3 style="color: lime;">How to reach us?</h3>
                 <i class="fas fa-phone-alt contact-detail">    416-474-7271</i>
                 <br>
                 <i class="fas fa-map-marker-alt contact-detail">    Toronto, Ontario. Canada</i>
@@ -248,6 +242,13 @@
 
 </div>
 <!-- End Contact you -->
+
+<footer>
+    <div class="footercontainer">
+        <small>&copy; Copyright 2020, MMXclusive Group</small>
+    </div>
+
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
