media queries added

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <body data-spy="scroll" data-target="#scroll-spy" data-offset="0">
 <!-- Start Navigation -->
-    <nav id="scroll-spy" class="navbar fixed-top navbar-expand-lg navbar-light bg-transparent">
+    <nav id="scroll-spy" class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
         <a class="navbar-brand" href="#">MMXclusive</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon" style="color: white;"></span>
+        <span class="navbar-toggler-icon"></span> 
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -169,7 +169,7 @@
             </div>
             <div class="client-comment">
                 <blockquote >
-                    <i class="fas fa-quote-left fa-xs"></i>
+                    <i class="fas fa-quote-left"></i>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum modi laudantium voluptates architecto cupiditate mollitia eos repellendus in labore eaque? Quod illum aliquam culpa quia sed, veniam quos porro at?
                 </blockquote>
                 <hr class="client-comment-underline">
@@ -199,7 +199,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <form>
+                <form class="contact-form-wrapper">
                     <div class="form-row full-name">
                         <div class="col">
                             <label for="firstname">First Name:</label>
@@ -221,7 +221,7 @@
                     <button class="btn btn-primary send-button" type="submit">Send</button>
                 </form>
             </div>
-            <div class="col-sm-6 text-center">
+            <div id="contact-details" class="col-sm-6 text-center">
                 <h3 style="color: lime;">How to reach us?</h3>
                 <i class="fas fa-phone-alt contact-detail">    416-474-7271</i>
                 <br>
