media queries added for different mobile devices

--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
     <div class="container">
         <h2 style="color: lime;">Contact Us!</h2>
     </div>
-    <div class="container">
+    <div class="container contact-form-wrapper">
         <div class="row">
-            <div class="col-sm-6">
-                <form class="contact-form-wrapper">
+            <div class="col-sm-6 form-area">
+                <form>
                     <div class="form-row full-name">
                         <div class="col">
                             <label for="firstname">First Name:</label>
