Color theme changed and Jquery fixed

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <!-- End First Fixed Background -->
 
 <!-- Start Services -->
-<div id="services" style="background-color: #D3D3D3;">
+<div id="services" style="background-color: #FFF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4 service text-center">
@@ -120,14 +120,14 @@
     
 
 <!-- Start Second Fixed Background -->
-<div class="second-bg" style="color: white;">
+<div class="second-bg">
 
 
 </div>
 <!-- End Second Fixed Background -->
 
 <!-- Start Testimonials -->
-<div id="testimonials" style="background-color: #A9A9A9;">
+<div id="testimonials" style="background-color: #1D130B;">
 
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
 
@@ -194,7 +194,7 @@
 <!-- Start Contact -->
 <div id="contact" class="home-bg contact-section">
     <div class="container">
-        <h2 style="color: lime;">Contact Us!</h2>
+        <h2 style="color: #feb062;">Contact Us!</h2>
     </div>
     <div class="container contact-form-wrapper">
         <div class="row">
@@ -218,11 +218,11 @@
                       <label for="exampleFormControlTextarea1">Message:</label>
                       <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Please write message here..." rows="3"></textarea>
                     </div>
-                    <button class="btn btn-primary send-button" type="submit">Send</button>
+                    <button class="btn btn-primary btn-lg float-right" type="submit">Send</button>
                 </form>
             </div>
             <div id="contact-details" class="col-sm-6 text-center">
-                <h3 style="color: lime;">How to reach us?</h3>
+                <h3 style="color: #feb062;">How to reach us?</h3>
                 <i class="fas fa-phone-alt contact-detail">    416-474-7271</i>
                 <br>
                 <i class="fas fa-map-marker-alt contact-detail">    Toronto, Ontario. Canada</i>
