social media linked

--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
                 <i class="fas fa-envelope-open-text contact-detail">   info@mmxclusive.com</i>
                 <br>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><a href=""><i class="fab fa-facebook-f fa-2x"></i></a></li>
-                    <li class="list-inline-item"><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
-                    <li class="list-inline-item"><a href=""><i class="fab fa-instagram fa-2x"></i></a></li>
-                    <li class="list-inline-item"><a href=""><i class="fab fa-youtube fa-2x"></i></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/muhammed-adelodun-b5646b195/"><i class="fab fa-linkedin fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="https://twitter.com/mmxclusive"><i class="fab fa-twitter fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.instagram.com/mmxclusive/"><i class="fab fa-instagram fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCOjhUbnIKSgnKtAD3I1sREA?view_as=subscriber"><i class="fab fa-youtube fa-2x"></i></i></a></li>
                 </ul>
             </div>
-            
+    
         </div>
     </div>
 
