media queries overhaul and parallax effect removed for handheld devices

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="section-content">
         <h1>Welcome to MMXclusive</h1>
         <h3>I'm <span class="typing-effect"></span></h3>
-        <p>I am a Full Stack Web developer, Web Designer, Professional Photographer & Filmmaker</p>
+        <p>I am a Full Stack Web developer, Professional Photographer & Filmmaker</p>
     </div>
 </div>
 
@@ -62,7 +62,7 @@
 
 
 
-<!-- Start Amout me -->
+<!-- Start About me -->
 <div id="about" class="light-bg">
 
     <div class="container">
@@ -182,7 +182,7 @@
 <!-- Start Contact -->
 <div id="contact" class="home-bg contact-section">
     <div class="container">
-        <h2 style="color: #feb062;">Contact Us!</h2>
+        <h2>Contact!</h2>
     </div>
     <div class="container contact-form-wrapper">
         <div class="row">
@@ -205,7 +205,7 @@
                 </form>
             </div>
             <div id="contact-details" class="col-sm-6 text-center">
-                <h3 style="color: #feb062;">How to reach us?</h3>
+
                 <i class="fas fa-phone-alt contact-detail">    416-474-7271</i>
                 <br>
                 <i class="fas fa-map-marker-alt contact-detail">    Toronto, Ontario. Canada</i>
