--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                 <div class="progress-bar bootstrap-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100">87%</div>
                 </div>
 
-                <h6>React</h6>
+                <h6>PHP</h6>
                 <div class="progress">
-                <div class="progress-bar react-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                <div class="progress-bar php-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
                 </div>
             </div>
         </div>
