Navbar disappear on scroll script and css added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body data-spy="scroll" data-target="#scroll-spy" data-offset="0">
 <!-- Start Navigation -->
-    <nav id="scroll-spy" class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
+    <nav id="scroll-spy" class="navbar smart-scroll fixed-top navbar-expand-lg navbar-dark bg-transparent">
         <a class="navbar-brand" href="#">MMXclusive</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span> 
